# Proyecto_final

./: pyproject.toml
src/ecuaciones/: euler.py  rc.py  van_der_pol.py
tests/: ecua_test.py
