[project]
name = "ecuaciones"
version = "0.1.0"
description = ""
authors = [
    {name = "daniarango36",email = "daniarango36@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.4,<3.0.0)",
    "matplotlib (>=3.10.1,<4.0.0)",
    "scipy (>=1.15.2,<2.0.0)",
    "pytest (>=8.3.5,<9.0.0)",
    "pytest-benchmark (>=5.1.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "ecuaciones", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
